--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vuepress dev docs",
     "build": "vuepress build docs",
-    "deploy": "bash deploy.sh",
+    "deploy": "NODE_OPTIONS=--openssl-legacy-provider bash deploy.sh",
     "editFm": "node utils/editFrontmatter.js",
     "baiduPush": "",
     "publish": "cd ./vdoing && npm publish && cd .. && yarn updateTheme",
